syntax = "proto3";

package view_notes_pb;

import "google/api/annotations.proto";

import "contents.proto";

message NoteAndContent {
    B64Note note = 1;
    AssociatedContents associated_contents = 2;
}

message B64Note {
    string user_id = 1;
    string file_id = 2;
    string file_content = 3;
}

message AssociatedContents {
    repeated content_pb.Flashcard flashcards = 1;
    repeated content_pb.MultipleChoiceQuestion mcqs = 2;
}

message ViewOneNoteRequest {
    string note_id = 1;
}

message ViewOneNoteResponse {
    string note_id = 1;
    NoteAndContent note_and_content = 2;
}

message ViewAllNotesRequest {
    int32 limit = 1;
    int32 offset = 2;
    int32 page = 3;
}

message ViewAllNotesResponse {
    int32 count = 1;
    repeated NoteAndContent notes_and_contents = 2;
    int32 next_page = 3;
}

message ViewNotesByUserIdRequest {
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
    int32 page = 4;
}

message ViewNotesByUserIdResponse {
    int32 count = 1;
    repeated NoteAndContent notes_and_contents = 2;
    int32 next_page = 3;
}

service ViewNotes {
    rpc ViewOneNote (ViewOneNoteRequest) returns (ViewOneNoteResponse) {
        option (google.api.http) = {
            get: "/api/v1/notes/{note_id}"
            body: "*"
        };
    };
    rpc ViewAllNotes (ViewAllNotesRequest) returns (ViewAllNotesResponse) {
        option (google.api.http) = {
            get: "/api/v1/notes"
            additional_bindings {
                get: "/api/v1/notes"
                body: "*"
            }
        };
    };
    rpc ViewNotesByUserId (ViewNotesByUserIdRequest) returns (ViewNotesByUserIdResponse) {
        option (google.api.http) = {
            get: "/api/v1/notes/user/{user_id}"
            body: "*"
        };
    };
}